Fix check-manifest in GH Action (#324)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install Python dependencies
         run: uv sync
       - name: Run check-manifest
-        run: uv run check-manifest
+        run: uv run --no-sync check-manifest
       - name: Run build
         run: uv build
       - name: Check package
