--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,7 +111,7 @@ dependencies = [
 memcached = ["pylibmc"]
 dev = [
             'django-debug-toolbar==4.4.*',
-            'ruff = "^0.11.0"',
+            'ruff>=0.11.0,<0.12.0',
             'coveralls',
             'coverage',
             'pytest==7.2.*',
