--- a/video/webapp/Dockerfile-dev
+++ b/video/webapp/Dockerfile-dev
@@ -1,8 +1,5 @@
 FROM node:22
 
-COPY package*.json /
-ENV PATH /node_modules/.bin:$PATH
-
-RUN cd / && npm ci
 WORKDIR /app
-ENV NODE_PATH=/node_modules
+COPY package*.json .
+RUN npm ci
