--- a/video/webapp/package.json
+++ b/video/webapp/package.json
@@ -2,96 +2,82 @@
   "name": "eventyay",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
-    "lint:nofix": "vue-cli-service lint --no-fix",
-    "i18n:report": "vue-i18n-extract report -v './src/**/*.?(js|vue)' -l './src/locales/*.js'",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .js,.vue",
+    "lint:fix": "eslint . --ext .js,.vue --fix",
     "i18n:extract": "npx i18next-parser 'src/**/*.vue' -c i18next-parser.config.js",
-    "start": "vue-cli-service serve",
-    "analyze": "ANALYZE=true npm run build"
+    "analyze": "ANALYZE=true vite build"
   },
   "dependencies": {
     "@mdi/font": "^5.5.55",
     "@popperjs/core": "^2.6.0",
-    "@pretalx/schedule": "^1.18.0",
+    "@pretalx/schedule": "^2.0.0-alpha.2",
     "@splidejs/splide": "^4.1.2",
-    "buntpapier": "^1.8.6",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "buntpapier": "^2.0.0-alpha.33",
     "color": "^4.0.0",
     "color-blend": "^3.0.0",
     "core-js": "^3.6.5",
+    "dompurify": "^3.0.9",
     "emoji-datasource-twitter": "^5.0.1",
     "emoji-mart": "^3.0.0",
     "emoji-regex": "^9.0.0",
+    "events": "^3.3.0",
     "hls.js": "^1.0.8",
     "i18next": "^21.0.1",
     "iso-639-1": "^2.1.15",
     "janus-gateway": "git+https://wtf-npm@github.com/meetecho/janus-gateway.git#7b010cd265991132158541ea80afcaa14bf4eb42",
+    "js-md5": "^0.8.3",
     "jwt-decode": "^3.1.2",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "markdown-it": "^12.2.0",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.34",
     "mux-embed": "^3.4.1",
     "mux.js": "^5.6.4",
-    "pdfjs-dist": "^2.10.377",
+    "pdfjs-dist": "^5.4.54",
     "preact": "^10.4.7",
     "qrcode": "^1.5.1",
     "quill": "^1.3.7",
     "random-js": "^2.1.0",
-    "register-service-worker": "^1.7.1",
     "roboto-fontface": "^0.10.0",
-    "sanitize-html": "2.4",
+    "sanitize-html": "^2.4.0",
     "twemoji-emojis": "^14.1.0",
     "uuid": "^8.3.0",
-    "vue": "^2.6.12",
-    "vue-advanced-cropper": "^0.16.10",
-    "vue-clickaway": "^2.2.2",
-    "vue-js-modal": "^2.0.1",
-    "vue-router": "^3.4.3",
-    "vue-slicksort": "^1.2.0",
-    "vue-virtual-scroller": "^1.0.10",
-    "vuelidate": "^0.7.5",
-    "vuex": "^3.5.1",
-    "web-animations-js": "^2.3.2"
+    "vue": "^3.4.19",
+    "vue-advanced-cropper": "^2.8.9",
+    "vue-router": "^4.2.5",
+    "vue-slicksort": "^2.0.5",
+    "vue-virtual-scroller": "^2.0.0-beta.8",
+    "vuex": "^4.1.0",
+    "web-animations-js": "^2.3.2",
+    "webrtc-adapter": "^9.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
-    "@babel/plugin-proposal-json-strings": "^7.10.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@vue/cli-plugin-babel": "^4.5.4",
-    "@vue/cli-plugin-eslint": "^4.5.4",
-    "@vue/cli-plugin-router": "^4.5.4",
-    "@vue/cli-plugin-vuex": "^4.5.4",
-    "@vue/cli-service": "^4.5.4",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/test-utils": "^1.0.4",
-    "babel-eslint": "^10.1.0",
-    "chai": "^4.1.2",
-    "eslint": "^7.7.0",
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-inject": "^5.0.5",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue-macros/reactivity-transform": "^0.4.3",
+    "@vue/eslint-config-standard": "^8.0.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "exports-loader": "^1.1.1",
+    "eslint-plugin-vue": "^9.26.0",
     "i18next-parser": "^4.7.0",
-    "json-loader": "^0.5.7",
     "modernizr": "^3.11.3",
-    "modernizr-loader": "^1.0.1",
-    "moment-locales-webpack-plugin": "^1.2.0",
-    "moment-timezone-data-webpack-plugin": "^1.5.0",
     "pug": "^3.0.0",
-    "pug-plain-loader": "^1.0.0",
-    "stylus": "^0.54.8",
-    "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.6.12",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "worker-loader": "^3.0.8"
+    "rollup-plugin-visualizer": "^5.10.0",
+    "stylus": "^0.55.0",
+    "vite": "^5.1.3",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-modernizr": "^1.0.0",
+    "vite-plugin-pwa": "^0.17.4",
+    "vite-plugin-static-copy": "^1.0.1"
   }
 }
