--- a/.github/workflows/enext-docker.yml
+++ b/.github/workflows/enext-docker.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: ./app
-          file: Dockerfile.prod
+          file: ./app/Dockerfile.prod
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
