--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -65,5 +65,9 @@ COPY --from=builder --chown=app:app /usr/src/app/.venv $APP_HOME/.venv
 # change to the app user
 USER app
 
+# Expose virtual env
+ENV VIRTUAL_ENV="$APP_HOME/.venv"
+ENV PATH="$APP_HOME/bin:$PATH"
+
 # run entrypoint.prod.sh
 ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
