--- a/video/webapp/package.json
+++ b/video/webapp/package.json
@@ -16,14 +16,14 @@
     "@mdi/font": "^5.5.55",
     "@popperjs/core": "^2.6.0",
     "@pretalx/schedule": "^2.0.0-alpha.2",
-    "@splidejs/splide": "^4.1.2",
+    "@splidejs/splide": "^4.1.4",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
-    "buntpapier": "^2.0.0-alpha.33",
+    "buntpapier": "^2.0.0-alpha.34",
     "color": "^4.0.0",
     "color-blend": "^3.0.0",
     "core-js": "^3.6.5",
-    "dompurify": "^3.0.9",
+    "dompurify": "^3.2.6",
     "emoji-datasource-twitter": "^5.0.1",
     "emoji-mart": "^3.0.0",
     "emoji-regex": "^9.0.0",
@@ -37,22 +37,23 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "markdown-it": "^12.2.0",
-    "moment": "^2.27.0",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.34",
     "mux-embed": "^3.4.1",
     "mux.js": "^5.6.4",
     "pdfjs-dist": "^5.4.54",
     "preact": "^10.4.7",
-    "qrcode": "^1.5.1",
-    "quill": "^1.3.7",
+    "qrcode": "^1.5.4",
+    "quill": "^2.0.3",
     "random-js": "^2.1.0",
+    "register-service-worker": "^1.7.2",
     "roboto-fontface": "^0.10.0",
     "sanitize-html": "^2.4.0",
     "twemoji-emojis": "^14.1.0",
     "uuid": "^8.3.0",
-    "vue": "^3.4.19",
+    "vue": "^3.5.17",
     "vue-advanced-cropper": "^2.8.9",
-    "vue-router": "^4.2.5",
+    "vue-router": "^4.5.1",
     "vue-slicksort": "^2.0.5",
     "vue-virtual-scroller": "^2.0.0-beta.8",
     "vuex": "^4.1.0",
@@ -66,18 +67,22 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue-macros/reactivity-transform": "^0.4.3",
     "@vue/eslint-config-standard": "^8.0.0",
+    "@vue/language-plugin-pug": "^2.2.10",
     "eslint": "^8.57.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-vue": "^9.26.0",
+    "eslint-plugin-vue-pug": "^0.6.2",
+    "globals": "^15.8.0",
     "i18next-parser": "^4.7.0",
-    "modernizr": "^3.11.3",
-    "pug": "^3.0.0",
     "rollup-plugin-visualizer": "^5.10.0",
+    "pug": "^3.0.3",
+    "sass": "^1.89.2",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-plugin-stylus": "^1.0.0",
     "stylus": "^0.55.0",
-    "vite": "^5.1.3",
+    "vite": "^5.4.19",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-modernizr": "^1.0.0",
-    "vite-plugin-pwa": "^0.17.4",
+    "vite-plugin-pwa": "^0.19.7",
     "vite-plugin-static-copy": "^1.0.1"
   }
 }
