--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -74,7 +74,7 @@ dependencies = [
     "django-filter>=24.3",
     "django-formset-js-improved>=0.5.0.3",
     "django-formtools>=2.5.1",
-    "django-hierarkey>=1.2.0",
+    "django-hierarkey>=2.0.1",
     "django-hijack>=3.7.1",
     "django-i18nfield>=1.10.2",
     "django-jquery-js>=3.1.1",
@@ -192,6 +192,7 @@ dependencies = [
     "requests>=2.32.3",
     "requests-oauthlib>=2.0.0",
     "responses>=0.25.5",
+    "rich>=14.1.0",
     "rjsmin>=1.2.2",
     "rpds-py>=0.22.3",
     "rules>=3.5",
@@ -241,7 +242,8 @@ requires = [
 
 [dependency-groups]
 dev = [
-    "django-debug-toolbar>=4.4.6",
+    "django-debug-toolbar>=6.0.0",
+    "django-extensions>=4.1",
 ]
 docs = [
     "sphinx>=8.2.3",
