--- a/video/webapp/package.json
+++ b/video/webapp/package.json
@@ -13,15 +13,15 @@
     "analyze": "ANALYZE=true vite build"
   },
   "dependencies": {
-    "@mdi/font": "^5.5.55",
+    "@mdi/font": "^7.4.47",
     "@popperjs/core": "^2.6.0",
     "@pretalx/schedule": "^2.0.0-alpha.2",
     "@splidejs/splide": "^4.1.4",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "buntpapier": "^2.0.0-alpha.34",
-    "color": "^4.0.0",
-    "color-blend": "^3.0.0",
+    "color": "^4.2.3",
+    "color-blend": "^4.0.0",
     "core-js": "^3.6.5",
     "dompurify": "^3.2.6",
     "emoji-datasource-twitter": "^5.0.1",
@@ -29,18 +29,18 @@
     "emoji-regex": "^9.0.0",
     "events": "^3.3.0",
     "hls.js": "^1.0.8",
-    "i18next": "^21.0.1",
-    "iso-639-1": "^2.1.15",
+    "i18next": "^25.5.0",
+    "iso-639-1": "^3.1.5",
     "janus-gateway": "git+https://wtf-npm@github.com/meetecho/janus-gateway.git#7b010cd265991132158541ea80afcaa14bf4eb42",
     "js-md5": "^0.8.3",
-    "jwt-decode": "^3.1.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "markdown-it": "^12.2.0",
+    "markdown-it": "^14.1.0",
     "moment": "^2.30.1",
-    "moment-timezone": "^0.5.34",
-    "mux-embed": "^3.4.1",
-    "mux.js": "^5.6.4",
+    "moment-timezone": "^0.6.0",
+    "mux-embed": "^5.11.0",
+    "mux.js": "^6.3.0",
     "pdfjs-dist": "^5.4.54",
     "preact": "^10.4.7",
     "qrcode": "^1.5.4",
@@ -49,7 +49,7 @@
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "^0.10.0",
     "sanitize-html": "^2.4.0",
-    "uuid": "^8.3.0",
+    "uuid": "^11.1.0",
     "vue": "^3.5.17",
     "vue-advanced-cropper": "^2.8.9",
     "vue-router": "^4.5.1",
@@ -61,27 +61,28 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
-    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-inject": "^5.0.5",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue": "^6.0.1",
     "@vue-macros/reactivity-transform": "^0.4.3",
-    "@vue/eslint-config-standard": "^8.0.0",
+    "@vue/eslint-config-standard": "^9.0.1",
     "@vue/language-plugin-pug": "^2.2.10",
-    "eslint": "^8.57.0",
+    "eslint": "^9.34.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-vue": "^9.26.0",
-    "eslint-plugin-vue-pug": "^0.6.2",
-    "globals": "^15.8.0",
+    "eslint-plugin-vue": "^10.4.0",
+    "eslint-plugin-vue-pug": "^1.0.0-alpha.4",
+    "globals": "^16.3.0",
     "i18next-parser": "^9.3.0",
     "pug": "^3.0.3",
-    "rollup-plugin-visualizer": "^5.10.0",
-    "sass": "^1.89.2",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-plugin-stylus": "^1.0.0",
-    "stylus": "^0.55.0",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "sass": "^1.92.0",
+    "stylus": "^0.64.0",
     "vite": "^5.4.19",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-pwa": "^0.19.7",
-    "vite-plugin-static-copy": "^1.0.1"
+    "vite-plugin-pwa": "^1.0.3",
+    "vue-eslint-parser": "^10.2.0"
+  },
+  "overrides": {
+    "esbuild": "^0.25.9"
   }
 }
