--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -117,6 +117,7 @@ dependencies = [
     "iniconfig>=2.0.0",
     "isort>=5.13.2",
     "isoweek>=1.3.3",
+    "jinja2>=3.1.6",
     "jsonschema>=4.23.0",
     "jsonschema-specifications>=2024.10.1",
     "jwcrypto>=1.5.6",
