--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ dependencies = [
         'django-hijack==3.7.*',
         'openpyxl==3.1.*',
         'django-oauth-toolkit==2.4.*',
-        'oauthlib==3.2.*',
+        'oauthlib >= 3.3.1',
         'django-phonenumber-field==7.3.*',
         'phonenumberslite==8.13.*',
         'python-bidi==0.6.*', # Support for Arabic in reportlab
@@ -102,7 +102,7 @@ dependencies = [
         'eventyay-paypal @ git+https://your_token@github.com/fossasia/eventyay-tickets-paypal.git@master',
         'django_celery_beat==2.7.0',
         'cron-descriptor==1.4.5',
-        'django-allauth[socialaccount] @ git+https://codeberg.org/quan/django-allauth.git@f151589949',
+        'django-allauth[socialaccount] >= 65.11.2',
         'eventyay-stripe @ git+https://github.com/fossasia/eventyay-tickets-stripe.git@master',
         'pydantic==2.10.4',
         "nh3>=0.2.21",
