--- a/app/eventyay/frontend/schedule-editor/package.json
+++ b/app/eventyay/frontend/schedule-editor/package.json
@@ -26,6 +26,7 @@
     "moment-locales-webpack-plugin": "^1.2.0",
     "moment-timezone": "^0.5.31",
     "moment-timezone-data-webpack-plugin": "^1.3.0",
+    "process": "^0.11.10",
     "vue": "^3.3.4",
     "vue-template-compiler": "^2.7.14"
   },
