Adjust Dockerfiles to run npm install

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,7 +10,7 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
 # install system dependencies
-RUN apt-get update && apt-get install -y netcat-traditional git build-essential gettext
+RUN apt-get update && apt-get install --no-install-recommends -y netcat-traditional git build-essential gettext make npm
 
 # copy project files
 COPY . .
@@ -29,6 +29,9 @@ RUN chmod +x /usr/src/app/entrypoint.sh
 # Expose virtual env
 ENV VIRTUAL_ENV=/usr/src/app/.venv
 ENV PATH="/usr/src/app/.venv/bin:$PATH"
+
+# Run npm stuff
+RUN make npminstall
 
 # run entrypoint.sh
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
